<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />
...
                android:layout_height="wrap_content"
                android:layout_above="@id/center_divider"
                android:layout_alignParentTop="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/student_address_book"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@id/center_divider_inner_top"
                    android:layout_toLeftOf="@id/center_divider_inner_top"
...
                    android:id="@+id/center_divider_inner_top"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/send_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/center_divider_inner_top"
                    android:layout_toRightOf="@id/center_divider_inner_top"
...
                android:layout_height="wrap_content"
                android:layout_below="@id/center_divider"
                android:layout_alignParentBottom="true"
                android:baselineAligned="false">

                <LinearLayout
                    android:id="@+id/track_sms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_toStartOf="@id/center_divider_inner_bottom"
                    android:layout_toLeftOf="@id/center_divider_inner_bottom"
...
                    android:id="@+id/center_divider_inner_bottom"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true" />

                <LinearLayout
                    android:id="@+id/assessment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_toEndOf="@id/center_divider_inner_bottom"
                    android:layout_toRightOf="@id/center_divider_inner_bottom"
...
            android:layout_weight="1.2"
            android:alpha="0.8"
            android:orientation="vertical"
            android:weightSum="1">

            <Button
                android:id="@+id/helpline_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_border_blue"
...
