...
    <!--    <string name="server_1_base_url"  translatable="false">http://192.168.1.41:8080</string>-->
    <string name="server_2_base_url_local"  translatable="false">http://192.168.1.14:8080</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="welcome" translatable="true">Welcome,</string>
    <string name="track_sms_delivery">Track SMS Delivery</string>
    <string name="fill_assessment_data">Fill Assessment Data</string>
    <string name="support">Support</string>
    <string name="visit_status">Visit Status</string>
    <string name="submitted_forms">Submitted Forms</string>
    <string name="no_sms_to_track">No SMS has been sent so far, therefore, no tracking report available for your account.</string>
    <string name="about_us">About Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="pta_meeting">PTA Meeting</string>
    <string name="success">Success</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="base_url_relay_server">http://142.93.208.135:8080</string>
...
