...
    <string name="pass_less_than_8_error">Password has to be at least 8 characters</string>
    <string name="set_new_password">Set New Password</string>
    <string name="pass_did_not_match">Passwords didn\'t match.</string>
    <string name="pass_changed_redirecting">The password has been successfully changed. Redirecting you to profile page</string>
    <string name="pass_change_successful">The password has been successfully changed. You need to login again to continue. Redirecting you to login page</string>
    <string name="error_in_change_pass">The server responded with an error. Please retry again</string>
    <string name="internet_not_connected">It seems you are not connected to the internet. Please switch on your mobile data to change password.</string>
    <string name="sending_otp">Sending OTP</string>
    <string name="error_sending_otp">Error sending OTP. Please contact admin</string>
    <string name="no_internet_2">It seems you are not connected to internet. Please check.</string>
    <string name="updating_user_profile">Updating User Profile...</string>
    <string name="both_cannot_change_at_same_time">Both Phone number and email cannot change at the same time. Please try with one first.</string>
    <string name="successful_update">User Details successfully updated.</string>
...
