package com.samagra.odktest;


import android.app.Activity;
import android.content.Context;
import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.internal.runner.junit4.AndroidJUnit4ClassRunner;
import androidx.test.platform.app.InstrumentationRegistry;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.lifecycle.ActivityLifecycleMonitorRegistry;

import com.samagra.ancillaryscreens.R;
import com.samagra.odktest.ui.HomeScreen.HomeActivity;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;


import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.action.ViewActions.closeSoftKeyboard;
import static androidx.test.espresso.action.ViewActions.pressImeActionButton;
import static androidx.test.espresso.action.ViewActions.replaceText;
import static androidx.test.espresso.assertion.ViewAssertions.matches;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.isRoot;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static androidx.test.espresso.matcher.ViewMatchers.withText;
import static com.samagra.odktest.EspressoTools.waitFor;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@RunWith(AndroidJUnit4ClassRunner.class)

public class HomeActivityTest {

    @Rule
    public ActivityTestRule<HomeActivity> mActivityTestRule = new ActivityTestRule<>(HomeActivity.class);


    @Test
    public void homeActivityTest() throws InterruptedException {

        ViewInteraction linearLayout = onView(allOf(withId(com.samagra.odktest.R.id.student_address_book))).check(matches(isDisplayed()));
        linearLayout.perform(click());
        onView(isRoot()).perform(waitFor(2000));

        pressBack();

        ViewInteraction linearLayout2 = onView(allOf(withId(com.samagra.odktest.R.id.send_sms))).check(matches(isDisplayed()));
        //linearLayout2.perform(click());
       // pressBack();

        ViewInteraction linearLayout3 = onView(allOf(withId(com.samagra.odktest.R.id.track_sms))).check(matches(isDisplayed()));
       // linearLayout3.perform(click());
       // pressBack();

        ViewInteraction linearLayout4 = onView(allOf(withId(com.samagra.odktest.R.id.assessment))).check(matches(isDisplayed()));
       // linearLayout4.perform(click());
       // pressBack();

        ViewInteraction appCompatButton2 = onView(allOf(withId(R.id.helpline_button), withText("Support"))).check(matches(isDisplayed()));
        //appCompatButton2.perform(click());
        //pressBack();

        onView(isRoot()).perform(waitFor(1000));

        ViewInteraction appCompatImageButton2 = onView(
                allOf(withContentDescription("\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200F\u200F\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200E\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200F\u200E\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200ENavigate up\u200E\u200F\u200E\u200E\u200F\u200E"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar),
                                        childAtPosition(
                                                withId(R.id.parent),
                                                0)),
                                1),
                        isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatImageButton2.perform(click());

        ViewInteraction appCompatTextView = onView(
                allOf(withId(android.R.id.title), withText("About Us"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatTextView.perform(click());
        onView(isRoot()).perform(waitFor(2000));
        pressBack();

        ViewInteraction appCompatImageButton3 = onView(
                allOf(withContentDescription("\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200F\u200F\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200E\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200F\u200E\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200ENavigate up\u200E\u200F\u200E\u200E\u200F\u200E"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar),
                                        childAtPosition(
                                                withId(R.id.parent),
                                                0)),
                                1),
                        isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatImageButton3.perform(click());

        ViewInteraction appCompatTextView2 = onView(
                allOf(withId(android.R.id.title), withText("Tutorial"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        appCompatTextView2.perform(click());
        onView(isRoot()).perform(waitFor(2000));
        /*//Snackbar (offline)
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText((R.string.internet_not_connected))));
        onView(isRoot()).perform(waitFor(1000));*/

        pressBack();

        ViewInteraction appCompatImageButton4 = onView(
                allOf(withContentDescription("\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200F\u200F\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200E\u200E\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200F\u200E\u200F\u200E\u200E\u200E\u200E\u200E\u200F\u200F\u200E\u200F\u200F\u200E\u200E\u200F\u200E\u200F\u200E\u200F\u200F\u200F\u200F\u200F\u200E\u200ENavigate up\u200E\u200F\u200E\u200E\u200F\u200E"),
                        childAtPosition(
                                allOf(withId(R.id.toolbar),
                                        childAtPosition(
                                                withId(R.id.parent),
                                                0)),
                                1),
                        isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatImageButton4.perform(click());

        ViewInteraction appCompatTextView3 = onView(
                allOf(withId(android.R.id.title), withText("Profile"),
                        childAtPosition(
                                childAtPosition(
                                        withId(android.R.id.content),
                                        0),
                                0),
                        isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatTextView3.perform(click());

        onView(isRoot()).perform(waitFor(1000));

        //Edit Profile(Usename)
        ViewInteraction floatingActionButton = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        floatingActionButton.perform(click());


        //If internet off Edit profile item is view
       /* ViewInteraction appCompatEditText_offline = onView(allOf(withId(R.id.edit_user_account_name))).check(matches(isDisplayed()));
        ViewInteraction appCompatEditText3_offline = onView(allOf(withId(R.id.edit_user_phone))).check(matches(isDisplayed()));
        ViewInteraction appCompatEditText5_offline = onView(allOf(withId(R.id.edit_user_email))).check(matches(isDisplayed()));*/



        //Edit Username
        ViewInteraction appCompatEditText = onView(allOf(withId(R.id.edit_user_account_name))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText.perform(click());
        appCompatEditText.perform(replaceText("Chakshu"), closeSoftKeyboard());



        //Update Profile(username)
        ViewInteraction floatingActionButton2 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton2.perform(click());
        floatingActionButton2.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));

        //Snackbar (offline)
        /*onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details failed to update. Please check your internet!"))));
        onView(isRoot()).perform(waitFor(1000));*/


        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details updated successfully."))));
        onView(isRoot()).perform(waitFor(1000));


        //Edit Profile (Mobile No.)
        ViewInteraction floatingActionButton3 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButton3.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        //Edit Phone No. (update mobile no)
        ViewInteraction appCompatEditText3 = onView(allOf(withId(R.id.edit_user_phone))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText3.perform(replaceText("8955159325"), closeSoftKeyboard());


        //Update Profile (Mobile No.)
        ViewInteraction floatingActionButton4 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton4.perform(click());
        floatingActionButton4.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar (offline)
        /*onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details failed to update. Please check your internet!"))));
        onView(isRoot()).perform(waitFor(1000));*/

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details updated successfully."))));
        onView(isRoot()).perform(waitFor(1000));



        //Update Profile (Exist Mobile No.)
        ViewInteraction floatingActionButton55 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButton55.perform(click());
        onView(isRoot()).perform(waitFor(1000));


        //Edit Phone No. (Exist Mobile No.)
        ViewInteraction appCompatEditText1 = onView(allOf(withId(R.id.edit_user_phone))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText1.perform(click());
        appCompatEditText1.perform(replaceText("9805126955"));
        onView(isRoot()).perform(waitFor(1000));

        //Update Profile (Exist Mobile No.)
        ViewInteraction floatingActionButton5 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton5.perform(click());
        floatingActionButton5.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("Multiple users with the same phone number found. Please ensure that your contact number is not used by any other account or Contact Admin."))));
        onView(isRoot()).perform(waitFor(2000));


        //Update Profile (11 No.)
        ViewInteraction floatingActionButton11d = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButton11d.perform(click());
        onView(isRoot()).perform(waitFor(1000));


        //Edit PExistMobile (11 digit)
        ViewInteraction appCompatEditTextExistMobile = onView(allOf(withId(R.id.edit_user_phone))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditTextExistMobile.perform(click());
        appCompatEditTextExistMobile.perform(replaceText("89551593230"), closeSoftKeyboard());

        onView(isRoot()).perform(waitFor(1000));
        //Update Profile (11Mobile No.)

        ViewInteraction floatingActionButton11 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton11.perform(click());
        floatingActionButton11.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("The mobile number is invalid. Please enter a valid mobile number."))));
        onView(isRoot()).perform(waitFor(1000));


        //Edit PExistMobile (10 digit)
        ViewInteraction appCompatEditText10 = onView(allOf(withId(R.id.edit_user_phone))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText10.perform(click());
        appCompatEditText10.perform(replaceText("8955159323"), closeSoftKeyboard());

        //Update Profile (10Mobile No.)
        ViewInteraction floatingActionButton10 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton10.perform(click());
        floatingActionButton10.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details updated successfully."))));
        onView(isRoot()).perform(waitFor(1000));


        //Edit Profile ( Email Address)
        ViewInteraction floatingActionButton6 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButton6.perform(click());
        onView(isRoot()).perform(waitFor(1000));

        //Edit Email (Wrong Email ID)
        ViewInteraction appCompatEditText5 = onView(allOf(withId(R.id.edit_user_email))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText5.perform(replaceText("chakshugautam@gmail.com"), closeSoftKeyboard());


        //Update Profile (Email ID)
        ViewInteraction floatingActionButton7 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton7.perform(click());
        floatingActionButton7.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar (offline)
        /*onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details failed to update. Please check your internet!"))));
        Thread.sleep(1000);*/

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details updated successfully."))));
        onView(isRoot()).perform(waitFor(1000));

        //Edit Profile (Email Address)
        ViewInteraction floatingActionButton8 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButton8.perform(click());
        onView(isRoot()).perform(waitFor(1000));


        //Edit Email
        ViewInteraction appCompatEditText2 = onView(allOf(withId(R.id.edit_user_email))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditText2.perform(click());
        appCompatEditText2.perform(replaceText("chakshu@gmail.com"), closeSoftKeyboard());


        //Update Profile ( Email ID)
        ViewInteraction floatingActionButton9= onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));

        floatingActionButton9.perform(click());
        floatingActionButton9.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(2000));

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("User details updated successfully."))));
        onView(isRoot()).perform(waitFor(2000));

        //Edit Profile (ExistEmail Address)
        ViewInteraction floatingActionButtonExistEmail = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButtonExistEmail.perform(click());
        onView(isRoot()).perform(waitFor(2000));


        //Edit Email
        ViewInteraction appCompatEditTextExistEmail = onView(allOf(withId(R.id.edit_user_email))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditTextExistEmail.perform(click());
        appCompatEditTextExistEmail.perform(replaceText("rishabh@samagragovernance.in"), closeSoftKeyboard());


        //Update Profile ( Email ID)

        ViewInteraction floatingActionButtonExistEmail1 = onView(allOf(withId(R.id.fab),childAtPosition(
                allOf(withId(R.id.parent),
                        childAtPosition(
                                withId(android.R.id.content),
                                0)),
                4)));
        floatingActionButtonExistEmail1.perform(click());
        floatingActionButtonExistEmail1.check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));

        //Snackbar
        onView(withId(com.google.android.material.R.id.snackbar_text))
                .check(matches(withText(("Multiple users with the same email found. Please ensure that your email is not used by any other account or Contact Admin."))));
        onView(isRoot()).perform(waitFor(1000));




        //Update Profile ( Email ID)
        ViewInteraction floatingActionButtonExistEmail12 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
                                                withId(android.R.id.content),
                                                0)),
                                4),
                        isDisplayed()));
        floatingActionButtonExistEmail12.perform(click());
        onView(isRoot()).perform(waitFor(1000));


        //Edit Email
        ViewInteraction appCompatEditTextExistEmail11 = onView(allOf(withId(R.id.edit_user_email))).check(matches(isDisplayed()));
        onView(isRoot()).perform(waitFor(1000));
        appCompatEditTextExistEmail11.perform(click());
        appCompatEditTextExistEmail11.perform(replaceText("chakshu@#gmail.com"), closeSoftKeyboard());

        //Update Profile ( Email ID)
        ViewInteraction floatingActionButtonExistEmail11 = onView(
                allOf(withId(R.id.fab),
                        childAtPosition(
                                allOf(withId(R.id.parent),
                                        childAtPosition(
